# customer_churn_analysis

./: .flake8  README.md  pyproject.toml
data/raw/: banks.db
notebooks/: 01_initial_analysis.ipynb
src/: analysis.py  cleaning.py  data.py  eda.py  main.py  model.py  visualization.py
