[tool.poetry]
name = "churn_analysis_project"
version = "0.1.0"
description = "Анализ оттока клиентов"
authors = ["VladislavaFr <vladislava.fridmann1@aol.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.1"
mypy = "^1.16.1"
black = "^25.1.0"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv",
  "env",
  "venv",
  ".idea",
  ".vscode",
  "data"
]
