[tool.poetry]
name = "customer_churn_analysis"          # Имя проекта
version = "0.1.0"                         # Версия проекта
description = "Проект анализа оттока клиентов с использованием Pandas и машинного обучения"
authors = ["VladislavaFn vladislava.fridmann1@aol.com"]  # Твои имя и email
readme = "README.md"                      # Описание в readme
packages = [{ include = "src" }]          # Папка с исходным кодом

[tool.poetry.dependencies]
python = "^3.11"                         # Версия Python (совместимо с 3.11 и выше)
pandas = "^2.2.2"                        # Основная библиотека для анализа данных
scikit-learn = "^1.3.0"                  # Для моделей машинного обучения
numpy = "^1.25.0"                        # Числовые вычисления
matplotlib = "^3.8.0"                    # Визуализация данных
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"                        # Тестирование
flake8 = "^7.3.0"                        # Линтер для стиля кода
black = "^24.4.2"                       # Автоформаттер кода
mypy = "^1.10.0"                        # Проверка типов

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv",
  "env",
  "venv",
  ".idea",
  ".vscode",
  "data"
]
